# [build-system]
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcdisk"
authors = [{name = "Lorenzo Posti", email = "lorenzo.posti@gmail.com"}]
# dynamic = ["version", "description"]
version = "0.1"
description = "Circular velocities of thick galaxy disks"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/lposti/vcdisk"
