# [build-system]
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "jinja2==3.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['vcdisk']

[project]
name = "vcdisk"
authors = [{name = "Lorenzo Posti", email = "lorenzo.posti@gmail.com"}]
version = "0.3.1"
description = "Circular velocities of thick galaxy disks"
readme = "README.md"
license = { text = "BSD-2" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [
    "numpy",
    "scipy",
    "jinja2==3.0.3",
]

[project.urls]
homepage = "https://github.com/lposti/vcdisk"
documentation = "https://vcdisk.readthedocs.io/en/latest/"
